VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc5Up.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [16MB/2.258GB][  0%][>                                                 ][5.333MB/s]  [56MB/2.258GB][  2%][=>                                                ][14MB/s]  [96MB/2.258GB][  4%][==>                                               ][19.2MB/s]  [136MB/2.258GB][  5%][==>                                               ][22.67MB/s]  [184MB/2.258GB][  7%][===>                                              ][26.29MB/s]  [240MB/2.258GB][ 10%][=====>                                            ][30MB/s]  [288MB/2.258GB][ 12%][======>                                           ][32MB/s]  [328MB/2.258GB][ 14%][=======>                                          ][32.8MB/s]  [368MB/2.258GB][ 15%][=======>                                          ][33.45MB/s]  [408MB/2.258GB][ 17%][========>                                         ][34MB/s]  [440MB/2.258GB][ 19%][=========>                                        ][33.85MB/s]  [464MB/2.258GB][ 20%][==========>                                       ][33.14MB/s]  [496MB/2.258GB][ 21%][==========>                                       ][33.07MB/s]  [528MB/2.258GB][ 22%][===========>                                      ][33MB/s]  [560MB/2.258GB][ 24%][============>                                     ][32.94MB/s]  [592MB/2.258GB][ 25%][============>                                     ][32.89MB/s]  [624MB/2.258GB][ 26%][=============>                                    ][32.84MB/s]  [656MB/2.258GB][ 28%][==============>                                   ][32.8MB/s]  [696MB/2.258GB][ 30%][===============>                                  ][33.14MB/s]  [744MB/2.258GB][ 32%][================>                                 ][33.82MB/s]  [800MB/2.258GB][ 34%][=================>                                ][34.78MB/s]  [848MB/2.258GB][ 36%][==================>                               ][35.33MB/s]  [896MB/2.258GB][ 38%][===================>                              ][35.84MB/s]  [952MB/2.258GB][ 41%][====================>                             ][36.62MB/s]  [1000MB/2.258GB][ 43%][=====================>                            ][37.04MB/s]  [1.023GB/2.258GB][ 45%][======================>                           ][37.43MB/s]  [1.07GB/2.258GB][ 47%][=======================>                          ][37.79MB/s]  [1.117GB/2.258GB][ 49%][========================>                         ][38.13MB/s]  [1.172GB/2.258GB][ 51%][=========================>                        ][38.71MB/s]  [1.219GB/2.258GB][ 53%][==========================>                       ][39MB/s]  [1.266GB/2.258GB][ 56%][============================>                     ][39.27MB/s]  [1.312GB/2.258GB][ 58%][=============================>                    ][39.53MB/s]  [1.359GB/2.258GB][ 60%][==============================>                   ][39.77MB/s]  [1.406GB/2.258GB][ 62%][===============================>                  ][40MB/s]  [1.453GB/2.258GB][ 64%][================================>                 ][40.22MB/s]  [1.492GB/2.258GB][ 66%][=================================>                ][40.21MB/s]  [1.531GB/2.258GB][ 67%][=================================>                ][40.21MB/s]  [1.57GB/2.258GB][ 69%][==================================>               ][40.2MB/s]  [1.602GB/2.258GB][ 70%][===================================>              ][40MB/s]  [1.633GB/2.258GB][ 72%][====================================>             ][39.81MB/s]  [1.656GB/2.258GB][ 73%][====================================>             ][39.44MB/s]  [1.695GB/2.258GB][ 75%][=====================================>            ][39.45MB/s]  [1.727GB/2.258GB][ 76%][======================================>           ][39.29MB/s]  [1.766GB/2.258GB][ 78%][=======================================>          ][39.3MB/s]  [1.797GB/2.258GB][ 79%][=======================================>          ][39.15MB/s]  [1.836GB/2.258GB][ 81%][========================================>         ][39.17MB/s]  [1.867GB/2.258GB][ 82%][=========================================>        ][39.02MB/s]  [1.898GB/2.258GB][ 84%][==========================================>       ][38.88MB/s]  [1.93GB/2.258GB][ 85%][==========================================>       ][38.75MB/s]  [1.961GB/2.258GB][ 86%][===========================================>      ][38.62MB/s]  [1.992GB/2.258GB][ 88%][============================================>     ][38.49MB/s]  [2.023GB/2.258GB][ 89%][============================================>     ][38.37MB/s]  [2.055GB/2.258GB][ 90%][=============================================>    ][38.25MB/s]  [2.094GB/2.258GB][ 92%][==============================================>   ][38.29MB/s]  [2.125GB/2.258GB][ 94%][===============================================>  ][38.18MB/s]  [2.156GB/2.258GB][ 95%][===============================================>  ][38.07MB/s]  [2.188GB/2.258GB][ 96%][================================================> ][37.97MB/s]  [2.203GB/2.258GB][ 97%][================================================> ][37.6MB/s]  [2.219GB/2.258GB][ 98%][=================================================>][37.25MB/s]  [2.234GB/2.258GB][ 98%][=================================================>][36.9MB/s]  [2.25GB/2.258GB][ 99%][=================================================>][36.57MB/s]  [2.258GB/2.258GB][100%][==================================================][36.71MB/s]  [2.258GB/2.258GB][100%][==================================================][36.13MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_48911/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_48911/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
